syntax = "proto3";
option java_package = "com.google.proto";
option java_outer_classname = "ChannelListQueryProto";

//通道列表查询
message ChannelListQuery {
    string createTime = 1; //创建时间
    string from = 2; //消息源头
    string to = 3; //消息目的地
    string msgId = 4; //消息编号
    string msgName = 5; //消息名称
    string subMsgName = 6; //子消息名称

    ChannelListQueryRequest requestBody = 7; //请求消息体

    ChannelListQueryResponse response = 8; //响应消息体

}

message ChannelListQueryRequest {
    string channelType = 1;
}

message ChannelListQueryResponse {
    //请求是否处理成功
    bool success = 1;
    //返回结果有业务异常
    bool hasBusinessException = 2;
    //业务异常错误代码
    string errorCode = 3;
    //业务异常错误信息
    string errorMsg = 4;
    //提示消息，需要进行国际化
    string message = 5;
    //正常返回参数
    repeated ChannelListQueryResult result = 6;

}


message ChannelListQueryResult {
    //记录唯一标记
    string uniqueId = 1;
    //通道编码
    string channelCode = 2;
    //通道名称
    string channelName = 3;
    //通道类型
    string channelType = 4;
}

