syntax = "proto3";
option java_package = "com.google.proto";
option java_outer_classname = "ParkingRealCountFHourQueryProto";

//分时段车位数占用情况
message ParkingRealCountFHourQuery {
    string createTime = 1; //创建时间
    string from = 2; //消息源头
    string to = 3; //消息目的地
    string msgId = 4; //消息编号
    string msgName = 5; //消息名称
    string subMsgName = 6; //子消息名称

    ParkingRealCountFHourQueryRequest requestBody = 7; //请求消息体

    ParkingRealCountFHourQueryResponse response = 8; //响应消息体

}

message ParkingRealCountFHourQueryRequest {
    //总车位
    int32 total = 1;
    //占用车位
    int32 occupyCount = 2;
    //重置时间
    string resetTime = 3;
    //剩余车位
    int32 remainCount = 4;
    //备注
    string remark = 5;
    //当前时段
    string currentHour=6;

}

message ParkingRealCountFHourQueryResponse {
    //请求是否处理成功
    bool success = 1;
    //返回结果有业务异常
    bool hasBusinessException = 2;
    //业务异常错误代码
    string errorCode = 3;
    //业务异常错误信息
    string errorMsg = 4;
    //提示消息，需要进行国际化
    string message = 5;
    //正常返回参数
    repeated ParkingRealCountFHourQueryResult result = 6;

}


message ParkingRealCountFHourQueryResult {
    //总车位
    int32 total = 1;
    //占用车位
    int32 occupyCount = 2;
    //重置时间
    string resetTime = 3;
    //剩余车位
    int32 remainCount = 4;
    //备注
    string remark = 5;
    //当前时段
    string currentHour=6;
}
