syntax = "proto3";
option java_package = "com.google.proto";
option java_outer_classname = "UsercrdtmInHistoryQueryProto";

//车流量查询
message UsercrdtmInHistoryQuery {
    string createTime = 1; //创建时间
    string from = 2; //消息源头
    string to = 3; //消息目的地
    string msgId = 4; //消息编号
    string msgName = 5; //消息名称
    string subMsgName = 6; //子消息名称

    UsercrdtmInHistoryQueryRequest requestBody = 7; //请求消息体

    UsercrdtmInHistoryQueryResponse response = 8; //响应消息体

}

message UsercrdtmInHistoryQueryRequest {
    int32 type = 1;
    string startTime = 2;
    string endTime = 3;
}

message UsercrdtmInHistoryQueryResponse {
    //请求是否处理成功
    bool success = 1;
    //返回结果有业务异常
    bool hasBusinessException = 2;
    //业务异常错误代码
    string errorCode = 3;
    //业务异常错误信息
    string errorMsg = 4;
    //提示消息，需要进行国际化
    string message = 5;
    //正常返回参数
    repeated UsercrdtmInHistoryQueryResult result = 6;

}


message UsercrdtmInHistoryQueryResult {
    //数量
    int32 count = 1;
    //当前时间段
    string current = 2;
}
